--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "url": "^0.11.4",
     "react-dom": "^19.1.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
