--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
