--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
@@ -19,7 +20,14 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "npm run build"
+    ]
   }
 }
